# Math

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/MyProject/: Application.hpp  ImGuiLayer.hpp  Renderer.hpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Application.cpp  CMakeLists.txt  ImGuiLayer.cpp  Renderer.cpp  glad.c  main.cpp  test_openmp.cpp
